tests/testthat/invalid_sgf/suicide.sgf
(;GM[1]FF[4]SZ[19]PW[supertjc]WR[7d]PB[High55]BR[6d]DT[2009-09-01]PC[The KGS Go Server at http://www.gokgs.com/]KM[0.50]RE[B+Resign]RU[Japanese]OT[5x10 byo-yomi]CA[UTF-8]ST[2]AP[Sabaki:0.31.4]TM[0]HA[2]AB[pd][dp]
;W[pm]
;B[df]
;W[pq]
;B[kq]
;W[qf]
;B[nc]
;W[ch]
;B[qe]
;W[pf]
;B[pi]
;W[ne]
;B[mi]
;W[mc]
;B[mb]
;W[nb]
;B[ob]
;W[nd]
;B[na]
;W[nb]
;B[ie]
;W[ge]
)